# vino

./: .gitignore  AI模型交易平台核心功能细化及落地执行方案.docx  README.md
.pm/: project.yml  updates.md
docs/: architecture.md  feature-checklist.md  generate_boss_deck.py  model-commerce-strategy.md  protocol.md  ui-language.md  vino-boss-deck.pptx  vino-老板汇报-商业逻辑.md  ~$vino-boss-deck.pptx
models/best.mlpackage/: Manifest.json
models/best.mlpackage/Data/com.apple.CoreML/: model.mlmodel
models/best_license_plate.mlpackage/: Manifest.json
models/best_license_plate.mlpackage/Data/com.apple.CoreML/: model.mlmodel
models/best_plane.mlpackage/: Manifest.json
models/best_plane.mlpackage/Data/com.apple.CoreML/: model.mlmodel
models/best_weld.mlpackage/: Manifest.json
models/best_weld.mlpackage/Data/com.apple.CoreML/: model.mlmodel
models/test_pcb_defect.mlpackage/: Manifest.json
models/test_pcb_defect.mlpackage/Data/com.apple.CoreML/: model.mlmodel
models/yolov8n.mlmodelc/: metadata.json
models/yolov8n.mlmodelc/model0/: model.mil
models/yolov8n.mlpackage/: Manifest.json
shared/examples/: capture_trigger.json  device_hello.json  device_status.json
shared/schemas/: vino-envelope-v1.schema.json
vino_Desktop/: CMakeLists.txt  README.md  build_local.sh  package_dmg.sh
vino_Desktop/Resources/: Info.plist.in  generate_icon_assets.py
vino_Desktop/build_cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  vino_desktop_app  vino_desktop_blueprint  vino_local_node
vino_Desktop/build_cmake/vino_Desktop.app/Contents/MacOS/: vino_Desktop
vino_Desktop/build_cmake/vino_Desktop.app/Contents/Resources/: vino_Desktop.icns
vino_Desktop/include/vino_desktop/: BatchGateway.hpp  Blueprint.hpp  Controller.hpp  DesktopRuntime.hpp  DeviceRegistry.hpp  FuturisticTheme.hpp  LocalNodeApi.hpp  LocalNodeConsoleAssets.hpp  LocalNodeForwarder.hpp  LocalNodeStorage.hpp  MiniJson.hpp  PostGateway.hpp  Protocol.hpp  RuntimePaths.hpp
vino_Desktop/src/: main.cpp  node_main.cpp
vino_Desktop/src/core/: Blueprint.cpp  DeviceRegistry.cpp  RuntimePaths.cpp
vino_Desktop/src/network/: BatchGateway.cpp  Controller.cpp  PostGateway.cpp
vino_Desktop/src/node/: LocalNodeApi.cpp  LocalNodeConsoleAssets.cpp  LocalNodeForwarder.cpp  LocalNodeStorage.cpp
vino_Desktop/src/protocol/: MiniJson.cpp  Protocol.cpp
vino_Desktop/src/ui/: DesktopRuntime.cpp  FuturisticTheme.cpp  MacApp.mm
vino_cloud/: README.md  package.json  server.js
vino_cloud/data/: state.json
vino_cloud/data/assets/: asset-2b63e64dee18e089.txt
vino_cloud/public/: app.css  app.js  index.html
vino_iPhone/: README.md
vino_iPhone/AppHost/: Info.plist  VinoPhoneApp.swift
vino_iPhone/Sources/App/: VinoPhoneShellView.swift
vino_iPhone/Sources/Auth/: AuthModels.swift  AuthService.swift  AuthSessionStore.swift  KeychainStore.swift
vino_iPhone/Sources/Camera/: CameraPreviewView.swift  CameraSessionController.swift
vino_iPhone/Sources/Inference/: InferenceRuntime.swift
vino_iPhone/Sources/Models/: CloudModelCatalog.swift  CoreMLCatalog.swift  InferenceModels.swift  ModelFileStore.swift  ModelLicenseVerifier.swift  VinoAppState.swift  VinoTheme.swift
vino_iPhone/Sources/Networking/: AssetUploadService.swift  CloudControlCoordinator.swift  ControlPlaneCoordinator.swift  IPAddressMonitor.swift  VinoProtocol.swift
vino_iPhone/Sources/Overlay/: CameraOverlayView.swift  InferenceResultsOverlayView.swift
vino_iPhone/vino_iPhone.xcodeproj/: project.pbxproj
vino_platform/: README.md  package.json  server.js
vino_platform/docs/: 00-executive-summary.md  01-prd.md  02-architecture.md  03-data-model.md  04-api-contract.md  05-implementation-plan.md  06-security-compliance.md  07-test-plan.md  08-role-matrix.md
vino_platform/public/: app.css  app.js  index.html
(+4 files in other folders)
